Major feature updates and security improvements
🚀 New Features:
- Email notification system with SMTP support
- Flapping detection for device and ping monitoring
- Enhanced notification controls and thresholds
- Improved UI/UX with modern design elements

🔧 Technical Improvements:
- Added email alerts alongside Telegram notifications
- Implemented flapping detection algorithm with configurable thresholds
- Enhanced settings UI with comprehensive notification controls
- Updated data retention to 730 days (2 years)

🛡️ Security & Configuration:
- Removed sensitive config files from git tracking (settings.json, config.json)
- Added proper .gitignore entries for configuration files
- Enhanced security by preventing credential exposure

📊 Monitoring Enhancements:
- Device flapping detection (configurable transitions/window)
- Ping target flapping detection
- Notification suppression during flapping events
- Flapping start/stop alerts

🎨 UI/UX Updates:
- Modern notification settings interface
- Email configuration section
- Flapping detection controls
- Enhanced system information display
- Updated data retention slider (7 days - 2 years)

📱 PWA Features:
- Added Progressive Web App support
- Service worker for offline functionality
- Web app manifest with icons
- Offline page support

🔄 Configuration Updates:
- Extended data retention period
- Added flapping detection defaults
- Enhanced notification preferences
- Improved default settings structure

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.18.2",
     "net-snmp": "^3.26.0",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^7.0.11",
     "ping": "^1.0.0",
     "pm2": "^6.0.13",
-    "snmp-native": "^1.2.0"
+    "snmp-native": "^1.2.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
