refactor: Move ping-targets.json to data folder with gitignore
- Moved ping-targets.json from root to data/ping-targets.json
- Added data/ping-targets.json to .gitignore (user-specific config)
- Created example-conf/ping-targets.json.example as configuration template
- Updated file paths in app.js (2 locations: initialization and save function)

Benefits:
✓ Organized configuration files in data/ folder
✓ Prevents accidental commits of ping monitoring targets
✓ Users can copy example file to data/ping-targets.json as starting point
✓ Consistent with topology.json configuration structure

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ pids
 # Ping monitoring data
 ping-history.json
 
+# Ping targets (user-specific configuration)
+data/ping-targets.json
+
 # Topology data (user-specific configuration)
 data/topology.json
 
